editing stuff because daniel is annoying

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@googol88/hillshacks-v",
+  "name": "@LiterallyCanada312/HillsHacksVII",
   "version": "0.0.1",
-  "author": "googol88",
+  "author": "LiterallyCanada",
   "license": "MIT",
   "private": true,
   "scripts": {
